<resources>
    <string name="app_name">BleTest</string>
    <string name="connected_devices">Connected Devices</string>
    <string name="start_server">Start Server</string>
    <string name="messages">Messages</string>
    <string name="enter_message">Enter Message</string>
    <string name="stop_server">Stop Server</string>
    <string name="scan">Scan BLE</string>
    <string name="uncouple_device">Uncouple Device</string>
    <string name="show_qr">Show QR</string>
    <string name="scan_qr">Scan QR</string>
</resources>
